# adventofcode2020

./: .gitignore  Makefile  README.md  pyproject.toml
src/aoc2020/: 1.py  2.py  3.py  4.py  5.py  6.py
